[package]
name = "varintrs"
version = "0.2.1"
edition = "2021"
authors = ["Walter Wu <895340293@qq.com>"]
description = "A Rust implementation of Golang Variable-Length Integers"
license = "MIT"
homepage = "https://github.com/szuwgh/varintrs"
repository = "https://github.com/szuwgh/varintrs"
keywords = ["byte", "Integer", "binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
